--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 38vmin;
   pointer-events: none;
 }
 
@@ -36,3 +36,5 @@
     transform: rotate(360deg);
   }
 }
+.matop{
+height: 70%;}
